[package]
edition = "2021"
name = "libgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
byteorder = "1.5.0"
clap = {version = "4.5.4", features = ["derive"]}
nonmax = "0.5.5"
petgraph = "0.6.4"
regex-lite = "0.1.5"
walkdir = "2.5.0"
